--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: testing-github-actions
 on: [push]
 jobs:
-  say-hello-world:
+  build-app:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hello world!!!"
-      - run: echo "hello world2!!!"
+      - uses: actions/checkout@v2
+      - run: tree
+      - run: ls
